--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,12 @@ build:
   tools:
     python: "3.13"
 
+python:
+  install:
+    - method: pip
+      path: .
+      extra: dev
+
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
    configuration: doc/source/conf.py
