--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,8 +14,8 @@ python:
   install:
     - method: pip
       path: .
-      extra: dev
+      args: [".[dev]"]
 
-# Build documentation in the "docs/" directory with Sphinx
+# Build documentation in the "doc/" directory with Sphinx
 sphinx:
    configuration: doc/source/conf.py
