--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "pyyml>=0.0.2",
     "tabulate>=0.9.0",
     "graphviz>=0.20.3",
-    "anytree>=2.13.0"
+    "anytree>=2.13.0",
+    "bincopy>=20.1.0"
 ]
 
 [project.optional-dependencies]
