--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,4 @@ max-complexity = 30
 
 [project.scripts]
 avl-trace-analysis = "avl.tools.trace_analysis:main"
+avl-coverage-analysis = "avl.tools.coverage_analysis:main"
